# gscholar-self-citation-remover

./: pyproject.toml
notebooks/: dev.ipynb
