[tool.poetry]
name = "GSSCRPY"
version = "0.1.0"
description = ""
authors = ["hawat629 <58569872+hawat629@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
